samples/_failures_safe/1761467835_a0e048_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d426ea2.c: In function ‘main’:
./samples/SAFE/__tmp_0d426ea2.c:167:5: error: expected expression at end of input
  167 |     printf("\nDecompressed data (%zu bytes):\n",
      |     ^~~~~~
./samples/SAFE/__tmp_0d426ea2.c:167:5: error: expected declaration or statement at end of input
